add hello world example

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World
+<html>
+    <head>
+        <title>Welcome to Coursera</title>
+    </head>
+    <body>Welcome to Coursera</body>
+</html>
