--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,15 +8,15 @@
         <h1 class="heading">Our Menu</h1>
         <div class="container">
             <div class="section">
-                <h2 class="section-title">Chicken</h2>
+                <h2 class="section-title background-pink">Chicken</h2>
                 <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="section">
-                <h2 class="section-title">Beef</h2>
+                <h2 class="section-title background-red">Beef</h2>
                 <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="section">
-                <h2 class="section-title">Sushi</h2>
+                <h2 class="section-title background-yellow">Sushi</h2>
                 <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
